--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -13,6 +13,7 @@
 		xmlns:tb="http://www.hardcodet.net/taskbar"
 		xmlns:mext="clr-namespace:AlephNote.WPF.MarkupExtensions"
 		xmlns:util="clr-namespace:AlephNote.WPF.Util"
+		xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
 		mc:Ignorable="d" 
 		Icon="/Resources/IconMain.png"
 		WindowState="{Binding WindowState}"
@@ -24,7 +25,7 @@
 		Loaded="MainWindow_OnLoaded"
 		KeyDown="MainWindow_OnKeyDown"
 		Topmost="{Binding Settings.AlwaysOnTop}"
-		Background="{Binding CurrentTheme.Window_Background, Converter={conv:ColorRefToBrush}}"
+		Background="{ext:ThemeBinding 'window.background', Type='brush'}"
 		Title="AlephNote" Height="350" Width="525">
 
 	<Grid x:Name="LayoutRoot">
@@ -40,8 +41,8 @@
 		</Grid.RowDefinitions>
 
 		<Menu Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" 
-			  Background="{Binding CurrentTheme.Window_MainMenu_Background, Converter={conv:BrushRefToBrush}}" 
-			  Foreground="{Binding CurrentTheme.Window_MainMenu_Foreground, Converter={conv:ColorRefToBrush}}" >
+			  Background="{ext:ThemeBinding 'window.mainmenu:background', Type='brush'}" 
+			  Foreground="{ext:ThemeBinding 'window.mainmenu:foreground', Type='brush'}" >
 			<MenuItem Header="File">
 				<ctrl:AutoActionMenuItem Header="New Note"                  AlephAction="NewNote"              Settings="{Binding Settings}"  />
 				<ctrl:AutoActionMenuItem Header="New Note (from clipboard)" AlephAction="NewNoteFromClipboard" Settings="{Binding Settings}"  />
@@ -175,7 +176,8 @@
 			</Grid.RowDefinitions>
 
 			<TextBox Grid.Row="0" BorderBrush="Transparent" BorderThickness="0"  
-					 Foreground="{Binding CurrentTheme.Window_NoteTitle_Foreground, Converter={conv:ColorRefToBrush}}" 
+					 Background="Transparent"
+					 Foreground="{ext:ThemeBinding 'window.notetitle:foreground', Type='brush'}" 
 					 FontSize="{Binding Settings.TitleFontSize, Converter={conv:FontSizeToInt}}" 
 					 FontFamily="{Binding Settings.TitleFontFamily, Converter={conv:FontNameToFontFamily}}" 
 					 FontWeight="{Binding Settings.TitleFontModifier, Converter={conv:FontModifierToFontWeight}}" 
@@ -194,16 +196,15 @@
 							TagSource="{Binding SelectedNote.Tags}" 
 							Repository="{Binding Repository}" 
 							Settings="{Binding Settings}" 
-							Theme="{Binding CurrentTheme}" 
 							Changed="TagEditor_OnChanged"/>
 
 			<StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal" Margin="8,2">
 				<TextBlock Text="*" 
-						   Foreground="{Binding CurrentTheme.Window_ChangeDate_Foreground, Converter={conv:ColorRefToBrush}}" 
+						   Foreground="{ext:ThemeBinding 'window.changedate:foreground', Type='brush'}" 
 						   Visibility="{Binding SelectedNote.IsLocalSaved, Converter={conv:BoolToVisibility}, ConverterParameter=Collapsed;Visible}" />
 				<TextBlock Text="{Binding SelectedNote.ModificationDate, Converter={conv:SmartDateTimeToDisplay}}" 
 					       ToolTip="{Binding SelectedNote.ModificationDate, Converter={conv:DTOToDisplay}}" 
-					       Foreground="{Binding CurrentTheme.Window_ChangeDate_Foreground, Converter={conv:ColorRefToBrush}}" />
+					       Foreground="{ext:ThemeBinding 'window.changedate:foreground', Type='brush'}" />
 			</StackPanel>
 
 			<Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Visibility="{Binding Settings.UseHierachicalNoteStructure, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}">
