--- a/Source/AlephNote.App/App.xaml
+++ b/Source/AlephNote.App/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="AlephNote.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="WPF/Windows/MainWindow.xaml">
+			 Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
