--- a/Source/AlephNote.App/WPF/Controls/TagEditor.xaml
+++ b/Source/AlephNote.App/WPF/Controls/TagEditor.xaml
@@ -20,6 +20,7 @@
 					
 					<TextBlock 
 						Foreground="{ext:ThemeBinding 'window.tageditor.tag:foreground', Type='brush'}" 
+						Background="Transparent"
 						Text="{Binding .}" 
 						Padding="2,0,2,0" />
 					
@@ -43,6 +44,7 @@
 		</TextBox>
 
 		<RichTextBox 
+				Foreground="{ext:ThemeBinding 'window.tageditor.foreground', Type='brush'}" 
 				Background="Transparent"
 				Grid.Row="0" x:Name="TagCtrl" MinHeight="25" BorderThickness="0" 
 				AcceptsReturn="False" AcceptsTab="False" 
