--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -205,74 +205,11 @@
 					       Foreground="{ext:ThemeBinding 'window.changedate:foreground', Type='brush'}" />
 			</StackPanel>
 
-			<Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Visibility="{Binding Settings.UseHierachicalNoteStructure, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="*" />
-					<ColumnDefinition Width="Auto" />
-				</Grid.ColumnDefinitions>
-
-				<ItemsControl Grid.Column="0" ItemsSource="{Binding SelectedNote.Path.ListProperty}" Margin="0,0,0,4" MinHeight="20">
-					<ItemsControl.ItemsPanel>
-						<ItemsPanelTemplate>
-							<StackPanel Orientation="Horizontal" />
-						</ItemsPanelTemplate>
-					</ItemsControl.ItemsPanel>
-					<ItemsControl.ItemTemplate>
-						<DataTemplate>
-							<StackPanel Orientation="Horizontal">
-                                <Border CornerRadius="4" BorderThickness="1" BorderBrush="{ext:ThemeBinding 'window.pathdisplay.element:border', Type='brush'}" Padding="4,1" Margin="0,0,5,0">
-									<Border.Style>
-										<Style TargetType="{x:Type Border}">
-                                            <Setter Property="Background" Value="{ext:ThemeBinding 'window.pathdisplay.element:background', Type='brush'}"/>
-											<Style.Triggers>
-												<Trigger Property="IsMouseOver" Value="True">
-                                                    <Setter Property="Background" Value="{ext:ThemeBinding 'window.pathdisplay.element:background_hover', Type='brush'}"/>
-												</Trigger>
-											</Style.Triggers>
-										</Style>
-									</Border.Style>
-                                    <TextBlock Text="{Binding .}" Foreground="{ext:ThemeBinding 'window.pathdisplay.element:foregroud', Type='brush'}"/>
-								</Border>
-                                <TextBlock Text="/" Margin="0,0,5,0" Foreground="{ext:ThemeBinding 'window.pathdisplay:foregroud', Type='brush'}"/>
-							</StackPanel>
-						</DataTemplate>
-					</ItemsControl.ItemTemplate>
-				</ItemsControl>
-
-				<Button Grid.Column="1" Content="..." Margin="2,0" MinWidth="30" VerticalAlignment="Center" 
-                        Foreground="{ext:ThemeBinding 'window.pathdisplay.button:foreground', Type='brush'}" 
-                        Background="{ext:ThemeBinding 'window.pathdisplay.button:background', Type='brush'}" 
-                        BorderBrush="{ext:ThemeBinding 'window.pathdisplay.button:border', Type='brush'}" 
-                        Command="{Binding ChangePathCommand}" />
-
-                <Popup Grid.Column="1" StaysOpen="False" Placement="Right" x:Name="FolderPopup">
-                    <Grid Background="{ext:ThemeBinding 'window.pathdisplay.popup:background', Type='brush'}">
-						<Grid.RowDefinitions>
-							<RowDefinition Height="Auto" />
-							<RowDefinition Height="Auto" />
-							<RowDefinition Height="Auto" />
-						</Grid.RowDefinitions>
-
-						<TextBlock  Grid.Row="0" 
-                                    Text="Move Note" FontWeight="Bold" HorizontalAlignment="Center" FontSize="16" 
-                                    Foreground="{ext:ThemeBinding 'window.pathdisplay.popup.text:foreground', Type='brush'}"/>
-
-                        <ListView   Grid.Row="1" x:Name="FolderPopupListView" 
-                                    Foreground="{ext:ThemeBinding 'window.pathdisplay.popup.list:foreground', Type='brush'}"
-                                    Background="{ext:ThemeBinding 'window.pathdisplay.popup.list:background', Type='brush'}"
-                                    DisplayMemberPath="Formatted" MaxHeight="200" Margin="2" />
-                        
-						<StackPanel Grid.Row="2">
-                            <Button Content="Move" MinWidth="200" FontWeight="Bold" Click="ButtonMoveFolder_OnClick" 
-                                    Foreground="{ext:ThemeBinding  'window.pathdisplay.popup.button:foreground', Type='brush'}" 
-                                    Background="{ext:ThemeBinding  'window.pathdisplay.popup.button:background', Type='brush'}" 
-                                    BorderBrush="{ext:ThemeBinding 'window.pathdisplay.popup.button:border', Type='brush'}" 
-                                    HorizontalAlignment="Right" Margin="2" />
-						</StackPanel>
-					</Grid>
-				</Popup>
-
-			</Grid>
+            <ctrl:PathEditor Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" x:Name="PathEditor"
+                             Visibility="{Binding Settings.UseHierachicalNoteStructure, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}"
+                             Settings="{Binding Settings}"
+                             SelectedNote="{Binding SelectedNote}"
+                             SelectedFolderPath="{Binding SelectedFolderPath}" />
 
 			<Grid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
 				<Grid.RowDefinitions>
