--- a/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
@@ -26,7 +26,7 @@
 						</Border>
 						<ControlTemplate.Triggers>
 							<Trigger Property="IsSelected" Value="true">
-								<Setter Property="Background" TargetName="Bd" Value="{ext:ThemeBinding 'window.notesview.flat.selected:background', Type='brush'}"/>
+								<Setter Property="Background" TargetName="Bd" Value="{ext:ThemeBinding 'window.notesview.flat.selected:background'}"/>
 							</Trigger>
 						</ControlTemplate.Triggers>
 					</ControlTemplate>
@@ -45,8 +45,8 @@
 					  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
 					  ScrollViewer.CanContentScroll="{Binding Settings.SmoothScrollNotesView, Converter={conv:NegateBool}}"
 					  SelectionMode="Single"
-					  Background="{ext:ThemeBinding 'window.notesview.flat:background', Type='brush'}"
-					  Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground', Type='brush'}"
+					  Background="{ext:ThemeBinding 'window.notesview.flat:background'}"
+					  Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}"
 					  ItemsSource="{Binding NotesView}" 
 					  SelectedValue="{Binding SelectedNote}"
 					  FontSize="{Binding Settings.ListFontSize, Converter={conv:FontSizeToInt}}" 
@@ -77,7 +77,7 @@
 							<Image Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
 							<TextBlock Grid.Column="1" 
 									   Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" 
-									   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground', Type='brush'}"
+									   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}"
 									   TextTrimming="CharacterEllipsis" />
 						</Grid>
 					</DataTemplate>
@@ -96,12 +96,12 @@
 									   Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
 
 							<TextBlock Grid.Column="1" 
-									   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground', Type='brush'}"
+									   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}"
 									   Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" 
 									   TextTrimming="CharacterEllipsis" />
 
 							<TextBlock Grid.Column="2" 
-									   Foreground="{ext:ThemeBinding 'window.notesview.flat.datetime1:foreground', Type='brush'}"
+									   Foreground="{ext:ThemeBinding 'window.notesview.flat.datetime1:foreground'}"
 									   Text="{Binding ModificationDate, Converter={conv:SmallDateTimeToDisplay}, Mode=OneWay}" 
 									   VerticalAlignment="Center">
 								<TextBlock.LayoutTransform>
@@ -132,32 +132,32 @@
 										   Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
 
 								<TextBlock Grid.Column="1" FontWeight="Bold" FontStyle="Normal" 
-										   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground', Type='brush'}" 
+										   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}" 
 										   Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" 
 										   TextTrimming="CharacterEllipsis" />
 							</Grid>
 
 							<TextBlock Grid.Row="1" TextWrapping="NoWrap">
 								<Run FontWeight="Normal" FontStyle="Normal" 
-									 Foreground="{ext:ThemeBinding 'window.notesview.flat.datetime2:foreground', Type='brush'}" 
+									 Foreground="{ext:ThemeBinding 'window.notesview.flat.datetime2:foreground'}" 
 									 Text="{Binding ModificationDate, Converter={conv:SmallDateTimeToDisplay}, Mode=OneWay}" />
 								<Run FontWeight="Normal" FontStyle="Normal" 
-									 Foreground="{ext:ThemeBinding 'window.notesview.flat.preview:foreground', Type='brush'}" 
+									 Foreground="{ext:ThemeBinding 'window.notesview.flat.preview:foreground'}" 
 									 Text="{Binding Text, Converter={conv:GetLine}, ConverterParameter=0, Mode=OneWay}" />
 							</TextBlock>
 							<TextBlock Grid.Row="2" TextWrapping="NoWrap">
 								<Run FontWeight="Normal" FontStyle="Normal" 
-									 Foreground="{ext:ThemeBinding 'window.notesview.flat.preview:foreground', Type='brush'}" 
+									 Foreground="{ext:ThemeBinding 'window.notesview.flat.preview:foreground'}" 
 									 Text="{Binding Text, Converter={conv:GetLine}, ConverterParameter=1, Mode=OneWay}" />
 							</TextBlock>
 							<TextBlock Grid.Row="3" TextWrapping="NoWrap">
 								<Run FontWeight="Normal" FontStyle="Normal" 
-									 Foreground="{ext:ThemeBinding 'window.notesview.flat.preview:foreground', Type='brush'}" 
+									 Foreground="{ext:ThemeBinding 'window.notesview.flat.preview:foreground'}" 
 									 Text="{Binding Text, Converter={conv:GetLine}, ConverterParameter=2, Mode=OneWay}" />
 							</TextBlock>
 							<Separator Grid.Row="4" 
-									   Background="{ext:ThemeBinding 'window.notesview.flat.separator', Type='brush'}" 
-									   Foreground="{ext:ThemeBinding 'window.notesview.flat.separator', Type='brush'}" 
+									   Background="{ext:ThemeBinding 'window.notesview.flat.separator'}" 
+									   Foreground="{ext:ThemeBinding 'window.notesview.flat.separator'}" 
 									   Margin="6,7,6,7" />
 						</Grid>
 					</DataTemplate>
@@ -180,21 +180,21 @@
 								<Image     Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" 
 										   Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
 								<TextBlock Grid.Column="1" FontWeight="Bold" FontStyle="Normal"
-										   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground', Type='brush'}" 
+										   Foreground="{ext:ThemeBinding 'window.notesview.flat:foreground'}" 
 										   Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
 							</Grid>
 
 							<TextBlock Grid.Row="1" TextWrapping="NoWrap">
 								<Run FontWeight="Normal" FontStyle="Normal" 
-									 Foreground="{ext:ThemeBinding 'window.notesview.flat.datetime2:foreground', Type='brush'}" 
+									 Foreground="{ext:ThemeBinding 'window.notesview.flat.datetime2:foreground'}" 
 									 Text="{Binding ModificationDate, Converter={conv:SmallDateTimeToDisplay}, Mode=OneWay}" />
 								<Run FontWeight="Normal" FontStyle="Normal" 
-									 Foreground="{ext:ThemeBinding 'window.notesview.flat.preview:foreground', Type='brush'}" 
+									 Foreground="{ext:ThemeBinding 'window.notesview.flat.preview:foreground'}" 
 									 Text="{Binding Text, Converter={conv:GetLine}, ConverterParameter=0, Mode=OneWay}" />
 							</TextBlock>
 							<Separator Grid.Row="2" 
-									   Background="{ext:ThemeBinding 'window.notesview.flat.separator', Type='brush'}" 
-									   Foreground="{ext:ThemeBinding 'window.notesview.flat.separator', Type='brush'}" 
+									   Background="{ext:ThemeBinding 'window.notesview.flat.separator'}" 
+									   Foreground="{ext:ThemeBinding 'window.notesview.flat.separator'}" 
 									   Margin="6,7,6,7" />
 						</Grid>
 					</DataTemplate>
