--- a/Source/AlephNote.App/WPF/Controls/PathEditor.xaml
+++ b/Source/AlephNote.App/WPF/Controls/PathEditor.xaml
@@ -25,20 +25,20 @@
 			<ItemsControl.ItemTemplate>
 				<DataTemplate>
 					<StackPanel Orientation="Horizontal">
-						<Border CornerRadius="4" BorderThickness="1" BorderBrush="{ext:ThemeBinding 'window.pathdisplay.element:border', Type='brush'}" Padding="4,1" Margin="0,0,5,0">
+						<Border CornerRadius="4" BorderThickness="1" BorderBrush="{ext:ThemeBinding 'window.pathdisplay.element:border'}" Padding="4,1" Margin="0,0,5,0">
 							<Border.Style>
 								<Style TargetType="{x:Type Border}">
-									<Setter Property="Background" Value="{ext:ThemeBinding 'window.pathdisplay.element:background', Type='brush'}"/>
+									<Setter Property="Background" Value="{ext:ThemeBinding 'window.pathdisplay.element:background'}"/>
 									<Style.Triggers>
 										<Trigger Property="IsMouseOver" Value="True">
-											<Setter Property="Background" Value="{ext:ThemeBinding 'window.pathdisplay.element:background_hover', Type='brush'}"/>
+											<Setter Property="Background" Value="{ext:ThemeBinding 'window.pathdisplay.element:background_hover'}"/>
 										</Trigger>
 									</Style.Triggers>
 								</Style>
 							</Border.Style>
-							<TextBlock Text="{Binding .}" Foreground="{ext:ThemeBinding 'window.pathdisplay.element:foregroud', Type='brush'}"/>
+							<TextBlock Text="{Binding .}" Foreground="{ext:ThemeBinding 'window.pathdisplay.element:foregroud'}"/>
 						</Border>
-						<TextBlock Text="/" Margin="0,0,5,0" Foreground="{ext:ThemeBinding 'window.pathdisplay:foregroud', Type='brush'}"/>
+						<TextBlock Text="/" Margin="0,0,5,0" Foreground="{ext:ThemeBinding 'window.pathdisplay:foregroud'}"/>
 					</StackPanel>
 				</DataTemplate>
 			</ItemsControl.ItemTemplate>
@@ -46,13 +46,13 @@
 
 		<Button Grid.Column="1" Content="..." Margin="2,0" MinWidth="30" VerticalAlignment="Center" 
 						Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" 
-						Foreground="{ext:ThemeBinding 'window.pathdisplay.button:foreground', Type='brush'}" 
-						Background="{ext:ThemeBinding 'window.pathdisplay.button:background', Type='brush'}" 
-						BorderBrush="{ext:ThemeBinding 'window.pathdisplay.button:border', Type='brush'}" 
+						Foreground="{ext:ThemeBinding 'window.pathdisplay.button:foreground'}" 
+						Background="{ext:ThemeBinding 'window.pathdisplay.button:background'}" 
+						BorderBrush="{ext:ThemeBinding 'window.pathdisplay.button:border'}" 
 						Command="{Binding ChangePathCommand}" />
 
 		<Popup Grid.Column="1" StaysOpen="False" Placement="Right" x:Name="FolderPopup">
-			<Grid Background="{ext:ThemeBinding 'window.pathdisplay.popup:background', Type='brush'}">
+			<Grid Background="{ext:ThemeBinding 'window.pathdisplay.popup:background'}">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
@@ -61,19 +61,19 @@
 
 				<TextBlock  Grid.Row="0" 
 									Text="Move Note" FontWeight="Bold" HorizontalAlignment="Center" FontSize="16" 
-									Foreground="{ext:ThemeBinding 'window.pathdisplay.popup.text:foreground', Type='brush'}"/>
+									Foreground="{ext:ThemeBinding 'window.pathdisplay.popup.text:foreground'}"/>
 
 				<ListView   Grid.Row="1" x:Name="FolderPopupListView" 
-									Foreground="{ext:ThemeBinding 'window.pathdisplay.popup.list:foreground', Type='brush'}"
-									Background="{ext:ThemeBinding 'window.pathdisplay.popup.list:background', Type='brush'}"
+									Foreground="{ext:ThemeBinding 'window.pathdisplay.popup.list:foreground'}"
+									Background="{ext:ThemeBinding 'window.pathdisplay.popup.list:background'}"
 									DisplayMemberPath="Formatted" MaxHeight="200" Margin="2" />
 
 				<StackPanel Grid.Row="2">
 					<Button Content="Move" MinWidth="200" FontWeight="Bold" Click="ButtonMoveFolder_OnClick" 
 									Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" 
-									Foreground="{ext:ThemeBinding  'window.pathdisplay.popup.button:foreground', Type='brush'}" 
-									Background="{ext:ThemeBinding  'window.pathdisplay.popup.button:background', Type='brush'}" 
-									BorderBrush="{ext:ThemeBinding 'window.pathdisplay.popup.button:border', Type='brush'}" 
+									Foreground="{ext:ThemeBinding  'window.pathdisplay.popup.button:foreground'}" 
+									Background="{ext:ThemeBinding  'window.pathdisplay.popup.button:background'}" 
+									BorderBrush="{ext:ThemeBinding 'window.pathdisplay.popup.button:border'}" 
 									HorizontalAlignment="Right" Margin="2" />
 				</StackPanel>
 			</Grid>
