--- a/Source/AlephNote.App/WPF/Controls/TagEditor.xaml
+++ b/Source/AlephNote.App/WPF/Controls/TagEditor.xaml
@@ -13,13 +13,13 @@
 		<ResourceDictionary>
 			<DataTemplate x:Key="TagTemplate">
 				<Border VerticalAlignment="Center" 
-						Background="{ext:ThemeBinding 'window.tageditor.tag:background', Type='brush'}" 
+						Background="{ext:ThemeBinding 'window.tageditor.tag:background'}" 
 						BorderThickness="1" 
 						BorderBrush="{Binding ., Converter={conv:TagToBorderBrush}}" 
 						Margin="-4,1,8,1" Padding="1">
 					
 					<TextBlock 
-						Foreground="{ext:ThemeBinding 'window.tageditor.tag:foreground', Type='brush'}" 
+						Foreground="{ext:ThemeBinding 'window.tageditor.tag:foreground'}" 
 						Background="Transparent"
 						Text="{Binding .}" 
 						Padding="2,0,2,0" />
@@ -37,14 +37,14 @@
 				Grid.Row="0" MinHeight="25" BorderThickness="0" 
 				Focusable="False" IsHitTestVisible="False" Panel.ZIndex="2"
 				Background="Transparent" 
-				Foreground="{ext:ThemeBinding 'window.tageditor.placeholder', Type='brush'}"
+				Foreground="{ext:ThemeBinding 'window.tageditor.placeholder'}"
 				Text="{Binding FormattedText, Converter={conv:TagsToPlaceholder}, Mode=OneWay}"
 				AcceptsReturn="False" AcceptsTab="False" 
 				Margin="5,0,0,0" VerticalContentAlignment="Top" >
 		</TextBox>
 
 		<RichTextBox 
-				Foreground="{ext:ThemeBinding 'window.tageditor.foreground', Type='brush'}" 
+				Foreground="{ext:ThemeBinding 'window.tageditor.foreground'}" 
 				Background="Transparent"
 				Grid.Row="0" x:Name="TagCtrl" MinHeight="25" BorderThickness="0" 
 				AcceptsReturn="False" AcceptsTab="False" 
@@ -62,11 +62,11 @@
 
 		<Popup Grid.Row="1" x:Name="AutocompletePopup" StaysOpen="False" Placement="Bottom" VerticalOffset="1">
 			<Grid>
-				<ListView x:Name="AutocompleteContent" Focusable="False" Background="{ext:ThemeBinding 'window.tageditor.popup:background', Type='brush'}" SelectionChanged="AutocompleteContent_Selected">
+				<ListView x:Name="AutocompleteContent" Focusable="False" Background="{ext:ThemeBinding 'window.tageditor.popup:background'}" SelectionChanged="AutocompleteContent_Selected">
 					<ListView.ItemContainerStyle>
 						<Style TargetType="{x:Type ListViewItem}">
-							<Setter Property="BorderBrush" Value="{ext:ThemeBinding 'window.tageditor.popup:bordercolor', Type='brush'}" />
-							<Setter Property="Foreground" Value="{ext:ThemeBinding 'window.tageditor.popup:foreground', Type='brush'}" />
+							<Setter Property="BorderBrush" Value="{ext:ThemeBinding 'window.tageditor.popup:bordercolor'}" />
+							<Setter Property="Foreground" Value="{ext:ThemeBinding 'window.tageditor.popup:foreground'}" />
 							<Setter Property="Background" Value="Transparent" />
 							<Setter Property="BorderThickness" Value="0,0,0,1" />
 						</Style>
