--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -25,7 +25,7 @@
 		Loaded="MainWindow_OnLoaded"
 		KeyDown="MainWindow_OnKeyDown"
 		Topmost="{Binding Settings.AlwaysOnTop}"
-		Background="{ext:ThemeBinding 'window.background', Type='brush'}"
+		Background="{ext:ThemeBinding 'window.background'}"
 		Title="AlephNote" Height="350" Width="525">
 
 	<Grid x:Name="LayoutRoot">
@@ -119,13 +119,13 @@
 
 			<controls:ClickSelectTextBox 
 				Grid.Row="0" Margin="0,2" 
-				Foreground="{ext:ThemeBinding 'window.globalsearch.input:foreground', Type='brush'}" 
-				Background="{ext:ThemeBinding 'window.globalsearch.input:background', Type='brush'}" 
-				BorderBrush="{ext:ThemeBinding 'window.globalsearch.input:border', Type='brush'}" 
+				Foreground="{ext:ThemeBinding 'window.globalsearch.input:foreground'}" 
+				Background="{ext:ThemeBinding 'window.globalsearch.input:background'}" 
+				BorderBrush="{ext:ThemeBinding 'window.globalsearch.input:border'}" 
 				Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" x:Name="GlobalSearchBar">
 				<services:WatermarkService.Watermark>
 					<TextBlock 
-						Foreground="{ext:ThemeBinding 'window.globalsearch.placeholder:foreground', Type='brush'}"
+						Foreground="{ext:ThemeBinding 'window.globalsearch.placeholder:foreground'}"
 						Background="Transparent"
 						Text="Search" 
 						Padding="5,0"/>
@@ -134,9 +134,9 @@
 
 			<Button Grid.Row="0" Grid.Column="1" Margin="2" BorderThickness="0" Padding="0" FontWeight="Bold" 
 					Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" 
-					Foreground="{ext:ThemeBinding 'window.globalsearch.button:foreground', Type='brush'}" 
-					Background="{ext:ThemeBinding 'window.globalsearch.button:background', Type='brush'}" 
-					BorderBrush="{ext:ThemeBinding 'window.globalsearch.button:border', Type='brush'}" 
+					Foreground="{ext:ThemeBinding 'window.globalsearch.button:foreground'}" 
+					Background="{ext:ThemeBinding 'window.globalsearch.button:background'}" 
+					BorderBrush="{ext:ThemeBinding 'window.globalsearch.button:border'}" 
 					Command="{Binding CreateNewNoteCommand}">
 				<Image Source="/Resources/plus.png" Margin="2" />
 			</Button>
@@ -174,7 +174,7 @@
 		</Grid>
 
 		<GridSplitter Grid.Row="1" Grid.Column="1" 
-					  Background="{ext:ThemeBinding 'window.splitter', Type='brush'}"
+					  Background="{ext:ThemeBinding 'window.splitter'}"
 					  HorizontalAlignment="Stretch" Width="3" Focusable="False" />
 
 		<Grid Grid.Column="2" Margin="1" Grid.Row="1" Visibility="{Binding SelectedNote, Converter={conv:IsNullToVisibility}, ConverterParameter=Hidden;Visible}" >
@@ -191,7 +191,7 @@
 
 			<TextBox Grid.Row="0" BorderBrush="Transparent" BorderThickness="0"  
 					 Background="Transparent"
-					 Foreground="{ext:ThemeBinding 'window.notetitle:foreground', Type='brush'}" 
+					 Foreground="{ext:ThemeBinding 'window.notetitle:foreground'}" 
 					 FontSize="{Binding Settings.TitleFontSize, Converter={conv:FontSizeToInt}}" 
 					 FontFamily="{Binding Settings.TitleFontFamily, Converter={conv:FontNameToFontFamily}}" 
 					 FontWeight="{Binding Settings.TitleFontModifier, Converter={conv:FontModifierToFontWeight}}" 
@@ -214,11 +214,11 @@
 
 			<StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal" Margin="8,2">
 				<TextBlock Text="*" 
-						   Foreground="{ext:ThemeBinding 'window.changedate:foreground', Type='brush'}" 
+						   Foreground="{ext:ThemeBinding 'window.changedate:foreground'}" 
 						   Visibility="{Binding SelectedNote.IsLocalSaved, Converter={conv:BoolToVisibility}, ConverterParameter=Collapsed;Visible}" />
 				<TextBlock Text="{Binding SelectedNote.ModificationDate, Converter={conv:SmartDateTimeToDisplay}}" 
 						   ToolTip="{Binding SelectedNote.ModificationDate, Converter={conv:DTOToDisplay}}" 
-						   Foreground="{ext:ThemeBinding 'window.changedate:foreground', Type='brush'}" />
+						   Foreground="{ext:ThemeBinding 'window.changedate:foreground'}" />
 			</StackPanel>
 
 			<ctrl:PathEditor Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" x:Name="PathEditor"
